Hero: Added a glowing animation & centered the text MobileMenuBtn: Made slightly smaller About: Removed scroll margin to fix the case when the opened mobile menu covered the heading

--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -2,7 +2,6 @@
   position: relative;
   padding-top: 3rem;
   padding-bottom: 5rem;
-  scroll-margin-top: -2rem;
   z-index: 1;
 
   @media (min-width: 992px) {
