--- a/styles/global.scss
+++ b/styles/global.scss
@@ -107,6 +107,8 @@
   --hero-gradient-3: var(--black);
   --hero-description: var(--sky-600);
   --hero-name: var(--black-50);
+  --hero-name-shadow: var(--sky-600);
+  --hero-name-shadow-50: rgba(2, 132, 197, 0.5);
   --hero-particle: var(--white-5);
 
   --code-border: var(--dark-blue-100);
